# twitch_bot_v3

./: .editorconfig  .gitignore  Cargo.toml  README.md
src/: access_tokens.rs  chat.rs  client.rs  database.rs  events.rs  main.rs  notifications.rs  secrets.rs
src/client/: client.html  client.js
