[package]
name = "twitch_bot_v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
env_logger = "0.11"
log = "0.4.20"
serde_json = "1.0.108"
sqlite = "0.32.0"
ureq = "2.9.1"
tungstenite = "0.21"
