[package]
name = "twitch_bot_v3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
serde_json = "1.0"
sqlite = "0.33"
tiny_http = "0.12"
tungstenite = { version = "0.21", features = ["native-tls"] }
ureq = "2.9"
